v0.0.33: add device uuid google web auth
